cmake_minimum_required(VERSION 3.5)

project(libdw)

set(all_SRCS
    libdw/cfi.c
    libdw/cie.c
    libdw/dwarf_abbrevhaschildren.c
    libdw/dwarf_abbrev_hash.c
    libdw/dwarf_addrdie.c
    libdw/dwarf_aggregate_size.c
    libdw/dwarf_arrayorder.c
    libdw/dwarf_attr.c
    libdw/dwarf_attr_integrate.c
    libdw/dwarf_begin.c
    libdw/dwarf_begin_elf.c
    libdw/dwarf_bitoffset.c
    libdw/dwarf_bitsize.c
    libdw/dwarf_bytesize.c
    libdw/dwarf_cfi_addrframe.c
    libdw/dwarf_cfi_end.c
    libdw/dwarf_child.c
    libdw/dwarf_cu_die.c
    libdw/dwarf_cu_getdwarf.c
    libdw/dwarf_cu_info.c
    libdw/dwarf_cuoffset.c
    libdw/dwarf_decl_column.c
    libdw/dwarf_decl_file.c
    libdw/dwarf_decl_line.c
    libdw/dwarf_default_lower_bound.c
    libdw/dwarf_die_addr_die.c
    libdw/dwarf_diecu.c
    libdw/dwarf_diename.c
    libdw/dwarf_dieoffset.c
    libdw/dwarf_end.c
    libdw/dwarf_entry_breakpoints.c
    libdw/dwarf_entrypc.c
    libdw/dwarf_error.c
    libdw/dwarf_filesrc.c
    libdw/dwarf_formaddr.c
    libdw/dwarf_formblock.c
    libdw/dwarf_formflag.c
    libdw/dwarf_formref.c
    libdw/dwarf_formref_die.c
    libdw/dwarf_formsdata.c
    libdw/dwarf_formstring.c
    libdw/dwarf_formudata.c
    libdw/dwarf_frame_cfa.c
    libdw/dwarf_frame_info.c
    libdw/dwarf_frame_register.c
    libdw/dwarf_func_inline.c
    libdw/dwarf_getabbrevattr.c
    libdw/dwarf_getabbrev.c
    libdw/dwarf_getabbrevcode.c
    libdw/dwarf_getabbrevtag.c
    libdw/dwarf_getalt.c
    libdw/dwarf_getarange_addr.c
    libdw/dwarf_getarangeinfo.c
    libdw/dwarf_getaranges.c
    libdw/dwarf_getattrcnt.c
    libdw/dwarf_getattrs.c
    libdw/dwarf_getcfi.c
    libdw/dwarf_getcfi_elf.c
    libdw/dwarf_getelf.c
    libdw/dwarf_getfuncs.c
    libdw/dwarf_getlocation_attr.c
    libdw/dwarf_getlocation.c
    libdw/dwarf_getlocation_die.c
    libdw/dwarf_getlocation_implicit_pointer.c
    libdw/dwarf_getmacros.c
    libdw/dwarf_getpubnames.c
    libdw/dwarf_getscopes.c
    libdw/dwarf_getscopes_die.c
    libdw/dwarf_getscopevar.c
    libdw/dwarf_getsrc_die.c
    libdw/dwarf_getsrcdirs.c
    libdw/dwarf_getsrc_file.c
    libdw/dwarf_getsrcfiles.c
    libdw/dwarf_getsrclines.c
    libdw/dwarf_getstring.c
    libdw/dwarf_get_units.c
    libdw/dwarf_hasattr.c
    libdw/dwarf_hasattr_integrate.c
    libdw/dwarf_haschildren.c
    libdw/dwarf_hasform.c
    libdw/dwarf_haspc.c
    libdw/dwarf_highpc.c
    libdw/dwarf_lineaddr.c
    libdw/dwarf_linebeginstatement.c
    libdw/dwarf_lineblock.c
    libdw/dwarf_linecol.c
    libdw/dwarf_linediscriminator.c
    libdw/dwarf_lineendsequence.c
    libdw/dwarf_lineepiloguebegin.c
    libdw/dwarf_line_file.c
    libdw/dwarf_lineisa.c
    libdw/dwarf_lineno.c
    libdw/dwarf_lineop_index.c
    libdw/dwarf_lineprologueend.c
    libdw/dwarf_linesrc.c
    libdw/dwarf_lowpc.c
    libdw/dwarf_macro_getparamcnt.c
    libdw/dwarf_macro_getsrcfiles.c
    libdw/dwarf_macro_opcode.c
    libdw/dwarf_macro_param1.c
    libdw/dwarf_macro_param2.c
    libdw/dwarf_macro_param.c
    libdw/dwarf_next_cfi.c
    libdw/dwarf_nextcu.c
    libdw/dwarf_next_lines.c
    libdw/dwarf_offabbrev.c
    libdw/dwarf_offdie.c
    libdw/dwarf_onearange.c
    libdw/dwarf_onesrcline.c
    libdw/dwarf_peel_type.c
    libdw/dwarf_ranges.c
    libdw/dwarf_setalt.c
    libdw/dwarf_siblingof.c
    libdw/dwarf_sig8_hash.c
    libdw/dwarf_srclang.c
    libdw/dwarf_tag.c
    libdw/dwarf_whatattr.c
    libdw/dwarf_whatform.c
    libdwelf/dwelf_dwarf_gnu_debugaltlink.c
    libdwelf/dwelf_elf_begin.c
    libdwelf/dwelf_elf_e_machine_string.c
    libdwelf/dwelf_elf_gnu_build_id.c
    libdwelf/dwelf_elf_gnu_debuglink.c
    libdwelf/dwelf_scn_gnu_compressed_size.c
    libdwelf/dwelf_strtab.c
    libdw/fde.c
    libdwfl/argp-std.c
    libdwfl/bzip2.c
    libdwfl/core-file.c
    libdwfl/cu.c
    libdwfl/derelocate.c
    libdwfl/dwfl_addrdie.c
    libdwfl/dwfl_addrdwarf.c
    libdwfl/dwfl_addrmodule.c
    libdwfl/dwfl_begin.c
    libdwfl/dwfl_build_id_find_debuginfo.c
    libdwfl/dwfl_build_id_find_elf.c
    libdwfl/dwfl_cumodule.c
    libdwfl/dwfl_dwarf_line.c
    libdwfl/dwfl_end.c
    libdwfl/dwfl_error.c
    libdwfl/dwfl_frame.c
    libdwfl/dwfl_frame_pc.c
    libdwfl/dwfl_frame_regs.c
    libdwfl/dwfl_getdwarf.c
    libdwfl/dwfl_getmodules.c
    libdwfl/dwfl_getsrc.c
    libdwfl/dwfl_getsrclines.c
    libdwfl/dwfl_line_comp_dir.c
    libdwfl/dwfl_linecu.c
    libdwfl/dwfl_lineinfo.c
    libdwfl/dwfl_linemodule.c
    libdwfl/dwfl_module_addrdie.c
    libdwfl/dwfl_module_addrname.c
    libdwfl/dwfl_module_addrsym.c
    libdwfl/dwfl_module_build_id.c
    libdwfl/dwfl_module.c
    libdwfl/dwfl_module_dwarf_cfi.c
    libdwfl/dwfl_module_eh_cfi.c
    libdwfl/dwfl_module_getdwarf.c
    libdwfl/dwfl_module_getelf.c
    libdwfl/dwfl_module_getsrc.c
    libdwfl/dwfl_module_getsrc_file.c
    libdwfl/dwfl_module_getsym.c
    libdwfl/dwfl_module_info.c
    libdwfl/dwfl_module_nextcu.c
    libdwfl/dwfl_module_register_names.c
    libdwfl/dwfl_module_report_build_id.c
    libdwfl/dwfl_module_return_value_location.c
    libdwfl/dwfl_nextcu.c
    libdwfl/dwfl_onesrcline.c
    libdwfl/dwfl_report_elf.c
    libdwfl/dwfl_segment_report_module.c
    libdwfl/dwfl_validate_address.c
    libdwfl/dwfl_version.c
    libdwfl/elf-from-memory.c
    libdwfl/find-debuginfo.c
    libdwfl/frame_unwind.c
    libdwfl/gzip.c
    libdwfl/image-header.c
    libdwfl/libdwfl_crc32.c
    libdwfl/libdwfl_crc32_file.c
    libdwfl/lines.c
    libdwfl/link_map.c
    libdwfl/linux-core-attach.c
#    libdwfl/linux-kernel-modules.c
    libdwfl/linux-pid-attach.c
    libdwfl/linux-proc-maps.c
    libdwfl/lzma.c
    libdwfl/offline.c
    libdwfl/open.c
    libdwfl/relocate.c
    libdwfl/segment.c
    libdw/frame-cache.c
    libdw/libdw_alloc.c
    libdw/libdw_findcu.c
    libdw/libdw_find_split_unit.c
    libdw/libdw_form.c
    libdw/libdw_visit_scopes.c
    libebl/eblabicfi.c
    libebl/eblauxvinfo.c
    libebl/eblbackendname.c
    libebl/eblbsspltp.c
    libebl/eblcheckobjattr.c
    libebl/eblcheckreloctargettype.c
    libebl/ebl_check_special_section.c
    libebl/ebl_check_special_symbol.c
    libebl/eblclosebackend.c
    libebl/eblcopyrelocp.c
    libebl/eblcorenote.c
    libebl/eblcorenotetypename.c
    libebl/ebl_data_marker_symbol.c
    libebl/ebldebugscnp.c
    libebl/ebldwarftoregno.c
    libebl/ebldynamictagcheck.c
    libebl/ebldynamictagname.c
    libebl/eblelfclass.c
    libebl/eblelfdata.c
    libebl/eblelfmachine.c
    libebl/eblgotpcreloccheck.c
    libebl/eblinitreg.c
    libebl/eblmachineflagcheck.c
    libebl/eblmachineflagname.c
    libebl/eblmachinesectionflagcheck.c
    libebl/eblnonerelocp.c
    libebl/eblnormalizepc.c
    libebl/eblobjnote.c
    libebl/eblobjnotetypename.c
    libebl/eblopenbackend.c
    libebl/eblosabiname.c
    libebl/eblreginfo.c
    libebl/eblrelativerelocp.c
    libebl/eblrelocsimpletype.c
    libebl/eblreloctypecheck.c
    libebl/eblreloctypename.c
    libebl/eblrelocvaliduse.c
    libebl/eblresolvesym.c
    libebl/eblretval.c
    libebl/eblsectionname.c
    libebl/eblsectionstripp.c
    libebl/eblsectiontypename.c
    libebl/eblsegmenttypename.c
    libebl/eblstother.c
    libebl/eblsymbolbindingname.c
    libebl/eblsymboltypename.c
    libebl/ebl_syscall_abi.c
    libebl/eblsysvhashentrysize.c
    libebl/eblunwind.c
    libelf/elf32_checksum.c
    libelf/elf32_fsize.c
    libelf/elf32_getchdr.c
    libelf/elf32_getehdr.c
    libelf/elf32_getphdr.c
    libelf/elf32_getshdr.c
    libelf/elf32_newehdr.c
    libelf/elf32_newphdr.c
    libelf/elf32_offscn.c
    libelf/elf32_updatefile.c
    libelf/elf32_updatenull.c
    libelf/elf32_xlatetof.c
    libelf/elf32_xlatetom.c
    libelf/elf64_checksum.c
    libelf/elf64_fsize.c
    libelf/elf64_getchdr.c
    libelf/elf64_getehdr.c
    libelf/elf64_getphdr.c
    libelf/elf64_getshdr.c
    libelf/elf64_newehdr.c
    libelf/elf64_newphdr.c
    libelf/elf64_offscn.c
    libelf/elf64_updatefile.c
    libelf/elf64_updatenull.c
    libelf/elf64_xlatetof.c
    libelf/elf64_xlatetom.c
    libelf/elf_begin.c
    libelf/elf_clone.c
    libelf/elf_cntl.c
    libelf/elf_compress.c
    libelf/elf_compress_gnu.c
    libelf/elf_end.c
    libelf/elf_error.c
    libelf/elf_fill.c
    libelf/elf_flagdata.c
    libelf/elf_flagehdr.c
    libelf/elf_flagelf.c
    libelf/elf_flagphdr.c
    libelf/elf_flagscn.c
    libelf/elf_flagshdr.c
    libelf/elf_getarhdr.c
    libelf/elf_getaroff.c
    libelf/elf_getarsym.c
    libelf/elf_getbase.c
    libelf/elf_getdata.c
    libelf/elf_getdata_rawchunk.c
    libelf/elf_getident.c
    libelf/elf_getphdrnum.c
    libelf/elf_getscn.c
    libelf/elf_getshdrnum.c
    libelf/elf_getshdrstrndx.c
    libelf/elf_gnu_hash.c
    libelf/elf_hash.c
    libelf/elf_kind.c
    libelf/elf_memory.c
    libelf/elf_ndxscn.c
    libelf/elf_newdata.c
    libelf/elf_newscn.c
    libelf/elf_next.c
    libelf/elf_nextscn.c
    libelf/elf_rand.c
    libelf/elf_rawdata.c
    libelf/elf_rawfile.c
    libelf/elf_readall.c
    libelf/elf_scnshndx.c
    libelf/elf_strptr.c
    libelf/elf_update.c
    libelf/elf_version.c
    libelf/gelf_checksum.c
    libelf/gelf_fsize.c
    libelf/gelf_getauxv.c
    libelf/gelf_getchdr.c
    libelf/gelf_getclass.c
    libelf/gelf_getdyn.c
    libelf/gelf_getehdr.c
    libelf/gelf_getlib.c
    libelf/gelf_getmove.c
    libelf/gelf_getnote.c
    libelf/gelf_getphdr.c
    libelf/gelf_getrela.c
    libelf/gelf_getrel.c
    libelf/gelf_getshdr.c
    libelf/gelf_getsym.c
    libelf/gelf_getsyminfo.c
    libelf/gelf_getsymshndx.c
    libelf/gelf_getverdaux.c
    libelf/gelf_getverdef.c
    libelf/gelf_getvernaux.c
    libelf/gelf_getverneed.c
    libelf/gelf_getversym.c
    libelf/gelf_newehdr.c
    libelf/gelf_newphdr.c
    libelf/gelf_offscn.c
    libelf/gelf_update_auxv.c
    libelf/gelf_update_dyn.c
    libelf/gelf_update_ehdr.c
    libelf/gelf_update_lib.c
    libelf/gelf_update_move.c
    libelf/gelf_update_phdr.c
    libelf/gelf_update_rela.c
    libelf/gelf_update_rel.c
    libelf/gelf_update_shdr.c
    libelf/gelf_update_sym.c
    libelf/gelf_update_syminfo.c
    libelf/gelf_update_symshndx.c
    libelf/gelf_update_verdaux.c
    libelf/gelf_update_verdef.c
    libelf/gelf_update_vernaux.c
    libelf/gelf_update_verneed.c
    libelf/gelf_update_versym.c
    libelf/gelf_xlate.c
    libelf/gelf_xlatetof.c
    libelf/gelf_xlatetom.c
    libelf/libelf_crc32.c
    libelf/libelf_next_prime.c
    libelf/nlist.c
)

#Generate the static library from the library sources
add_library(dw STATIC ${all_SRCS})

target_include_directories(dw
    PUBLIC 
        ${PROJECT_SOURCE_DIR}/lib
        ${PROJECT_SOURCE_DIR}/libasm
        ${PROJECT_SOURCE_DIR}/libdw
        ${PROJECT_SOURCE_DIR}/libdwelf
        ${PROJECT_SOURCE_DIR}/libdwfl
        ${PROJECT_SOURCE_DIR}/libebl
        ${PROJECT_SOURCE_DIR}/libelf
)

install(FILES  libelf/elf-knowledge.h 
               libdw/known-dwarf.h 
               libasm/libasm.h
               libdwelf/libdwelf.h
               libdwfl/libdwfl.h
               libdw/libdw.h               
        DESTINATION include/elfutils)
install(FILES  libdw/dwarf.h libelf/gelf.h libelf/nlist.h libelf/libelf.h DESTINATION include)
install(TARGETS dw ARCHIVE DESTINATION lib)

### test
#SET(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++")
add_executable(test1 backward.cpp)
target_include_directories(test1
    PUBLIC 
        ${PROJECT_SOURCE_DIR}/lib
        ${PROJECT_SOURCE_DIR}/libasm
        ${PROJECT_SOURCE_DIR}/libdw
        ${PROJECT_SOURCE_DIR}/libdwelf
        ${PROJECT_SOURCE_DIR}/libdwfl
        ${PROJECT_SOURCE_DIR}/libebl
        ${PROJECT_SOURCE_DIR}/libelf
)
target_link_libraries(test1 dw z dl)
